--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.15-alpine AS builder
+FROM node:16-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm i
@@ -7,7 +7,7 @@ RUN npm run build \
     && rm -rf ./src \
     && rm -rf ./node_modules
 
-FROM nginx:1.23-alpine AS frontend
+FROM nginx:latest AS frontend
 COPY --from=builder /app/build /usr/share/nginx/html
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d
 EXPOSE 8081
